fix: maintain 20px spacing and top alignment between boxes on medium and small screens

--- a/week1/styles.css
+++ b/week1/styles.css
@@ -282,7 +282,7 @@ input {
 
 .promotion {
   background-color: #e9f3f9;
-  height: 50px;
+  height: 80px;
   display: flex;
   align-items: center;
   font-weight: bold;
@@ -290,7 +290,6 @@ input {
 
 .proImg {
   width: 80px;
-  height: 50px;
 }
 
 .gallery {
@@ -348,7 +347,7 @@ input {
   .gallery {
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 200px; /* 等高 */
-    gap: 10px;
+    gap: 20px;
   }
   .gallery .card:nth-last-child(2),
   .gallery .card:last-child {
@@ -360,7 +359,6 @@ input {
   .container {
     width: 90vw;
   }
-
   .burger {
     display: block;
     cursor: pointer;
@@ -369,8 +367,6 @@ input {
     display: none;
   }
 
-  
-  
   .menu-panel {
     position: fixed;
     top: 0;
@@ -440,8 +436,7 @@ input {
   .gallery {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   }
 }
 
-/* testtt */
